fixing spacing between sections

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,10 @@ hr {
     text-align: center;
 }
 
+#aboutMeHeader {
+    margin-bottom: 35px;
+}
+
 #contactHeader {
     margin: 20px;
 }
